#444 fix: alinha atualização ao Hub
