# apps/root/src/app/api/api-docs-core.json
@@ -3787,13 +3787,6 @@
                 "properties": {
                     "name": {
                         "type": "string"
-                    },
-                    "email": {
-                        "type": "string",
-                        "format": "email"
-                    },
-                    "avatarUrl": {
-                        "type": "string"
                     }
                 }
             },
